--- a/homepage/main.css
+++ b/homepage/main.css
@@ -44,6 +44,11 @@ header .inner-header .intro-text {
 
 header .inner-header .intro-text a {
     color: #fff;
+    /* margin-right: 8px; */
+}
+
+header .inner-header .intro-text a:hover {
+    text-decoration: underline;
 }
 header .inner-header .btnLogin {
     display: flex;
@@ -57,6 +62,7 @@ header .inner-header .login {
     color: #000;
     width: 65px;
     height: 38px;
+    cursor: pointer;
 }
 
 .first-floor {
@@ -67,7 +73,7 @@ header .inner-header .login {
 }
 
 .first-floor .txt {
-    width: 46%;
+    width: 45%;
     /* position으로 화면 정중장에 놓는 공식 */
     position: absolute;
     left: 50%;
@@ -108,6 +114,12 @@ header .inner-header .login {
     margin-right: 20px;
     cursor: pointer;
 }
+.first-floor .btndiv .download:hover, 
+header .inner-header .login:hover {
+    transition: 0.3s;
+    color: #404eed;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+}
 
 .first-floor .btndiv .browser {
     border-radius: 30px;
@@ -120,10 +132,16 @@ header .inner-header .login {
     cursor: pointer;
 }
 
+.first-floor .btndiv .browser:hover {
+    transition: 0.3s;
+    background: #383c3f;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
 .first-floor .leftImg {
     position: absolute;
     background: url(img/leftImg.svg) no-repeat center/cover;
-    left: -195px;
+    left: -190px;
     bottom: 0;
     width: 41%;
     height: 37vh;
@@ -362,6 +380,13 @@ header .inner-header .login {
     cursor: pointer;
  }
 
+ .sixth-floor .download:hover,
+ .under .Sign-up:hover {
+    transition: 0.3s;
+    background: #7881e4;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+ }
+
 
  /* footer */
  .footer {
@@ -433,6 +458,10 @@ header .inner-header .login {
     color: #fff;
 }
 
+.footer ul li a:hover {
+    text-decoration: underline;
+}
+
 .language {
     background: #23272a;
     padding: 10px;
@@ -452,6 +481,10 @@ header .inner-header .login {
     font-size: 20px;
     color: #fff;
     background:url('img/32213.png') no-repeat 70% 50%/15px auto;
+}
+
+.lang:hover {
+    cursor: pointer;
 }
 
 .socialIcon {
@@ -474,6 +507,7 @@ header .inner-header .login {
     width: 150px;
     height: 30px;
     filter: invert(100);
+    cursor: pointer;
 }
 
 .under .Sign-up {
