--- a/blogpage/main.css
+++ b/blogpage/main.css
@@ -1,5 +1,19 @@
+@import url("https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css");
 body{
     margin: 0;
+
+}
+* {
+    box-sizing: border-box;
+}
+p{
+    margin-top: 10px;
+    font-size: 25px !important;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.blog-pillar-label{
+    margin-bottom: 10px;
 }
 header{
     background: rgb(86, 86, 243);
@@ -9,6 +23,11 @@ header{
     height: 100px;
     display: flex;
     justify-content: center;
+}
+header h1{
+    font-size: 30px;
+    font-weight: 700;
+    margin-right: 10px;
 }
 header .blog-navber{
     width: 90%;
@@ -133,6 +152,15 @@ section.section-view1 a.view1{
     text-decoration: none;
     width: 45%;
 }
+section.section-view1 a.view1 p{
+    margin-top: 10px;
+}
+section.section-view1 a.view2 p{
+    margin-top: 10px;
+}
+section.section-view1 a.view1 span{
+    margin-top: 10px;
+}
 section.section-view1 a.view2{
     text-decoration: none;
     width: 45%;
@@ -188,7 +216,15 @@ section.section-view2 a.view3{
     text-decoration: none;
     width: 30%;
 }
-
+section.section-view2 a.view1 p{
+    margin-top: 10px;
+}
+section.section-view2 a.view2 p{
+    margin-top: 10px;
+}
+section.section-view2 a.view3 p{
+    margin-top: 10px;
+}
 section.section-view2 a.view1 img.img1{
     width: 100%;
     border-radius: 10px;
@@ -252,6 +288,15 @@ section.section-view3 a.view2{
 section.section-view3 a.view3{
     text-decoration: none;
     width: 30%;
+}
+section.section-view3 a.view1 p{
+    margin-top: 10px;
+}
+section.section-view3 a.view2 p{
+    margin-top: 10px;
+}
+section.section-view3 a.view3 p{
+    margin-top: 10px;
 }
 
 section.section-view3 a.view1 img.img1{
@@ -941,3 +986,136 @@ div.blog-hero-container5 p:hover{
     color: rgb(86, 86, 243);
     transition: calc(0.3s);
 }
+/* footer  */
+ /* footer */
+ .footer {
+    background: #23272a;
+    height: 65vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* padding-left: 250px;
+    padding-right: 250px;
+    padding-top: 30px; */
+    flex-wrap: wrap;
+    padding: 50px 250px;
+}
+
+.langSns {
+    /* background: tomato; */
+    width: 100px;
+    height: 100px;
+    flex: 1;
+    height: 70%;
+}
+
+.dummy {
+    width: 150px
+}
+
+.product {
+    flex: 1;
+    height: 70%;
+}
+
+.company {
+    flex: 1;
+    width: 100px;
+    height: 100px;
+    /* background: aqua; */
+    height: 70%;
+}
+
+.resource {
+    flex: 1;
+    width: 100px;
+    height: 100px;
+    /* background: greenyellow; */
+    height: 70%
+}
+
+.policy {
+    flex: 1;
+    width: 100px;
+    height: 100px;
+    /* background: violet; */
+    height: 70%;
+}
+
+.footer ul {
+    color: #5865f2;
+    line-height: 3.5;
+}
+
+.footer ul li {
+    text-decoration: none;
+    line-height: 1.8;
+}
+
+.footer ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer ul li a:hover {
+    text-decoration: underline;
+}
+
+.language {
+    background: #23272a;
+    padding: 10px;
+    padding-bottom: 50px;
+    margin-top: 30px;
+}
+
+.lang {
+    -o-appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background: #fff;
+    border: none;
+    width: 150px;
+    height: 35px;
+    font-size: 20px;
+    color: red;
+    background:url('img/32213.png') no-repeat 70% 50%/15px auto;
+}
+
+.lang:hover {
+    cursor: pointer;
+}
+
+.socialIcon {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.under {
+    border-top: 2px solid #5865f2;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 20px;
+}
+
+.under .logo img {
+    width: 150px;
+    height: 30px;
+    filter: invert(100);
+    cursor: pointer;
+}
+
+.under .Sign-up {
+    color: #fff;
+    background: #5865f2;
+    border-radius: 30px;
+    width: 100px;
+    height: 50px;
+    border: none;
+    cursor: pointer;
+}   
