--- a/downloadpage/main.css
+++ b/downloadpage/main.css
@@ -49,7 +49,8 @@ body {
     padding: 10px;
     width: 200px;
     height: 50px;
-    margin-top: -10px;
+    margin-top: 5px;
+    margin-right: 50px;
 }
 .discordhead p {
     padding: 10px;
@@ -237,7 +238,7 @@ section #downbtn {
     color: #fff;
     font-size: 20px;
     padding: 10px 20px 10px 20px;
-    margin-left: 130px;
+    margin-left: 75px;
     margin-top: 20px;
     transition: 0.3s;
     text-decoration-line: none;
