--- a/blogpage/main.css
+++ b/blogpage/main.css
@@ -1079,7 +1079,7 @@ div.blog-hero-container5 p:hover{
     width: 150px;
     height: 35px;
     font-size: 20px;
-    color: red;
+    color: aqua;
     background:url('img/32213.png') no-repeat 70% 50%/15px auto;
 }
 
