--- a/downloadpage/main.css
+++ b/downloadpage/main.css
@@ -14,7 +14,7 @@ body {
     /* background: orange; */
     width: 550px;
     height: 500px;
-    margin-left: 400px;
+    margin-left: 250px;
 }
 .discordhead h1 {
     padding: 20px;
@@ -194,6 +194,7 @@ section .issac5 .box2 {
     width: 400px;
     overflow: hidden;
     padding: 50px;
+    border-radius: 20px;
 }
 section .issac5 .box2 h2{
     font-weight: 700;
